# math

./: CMakeLists.txt  README.md  Vector.cpp  Vector2.cpp  Vector3.cpp
.github/workflows/: cpp-linter.yml  reviewdog.yml
header/: Matrix4x4.hpp  Vector2.h  Vector2.hpp  Vector3.h  Vector3.hpp
includes/: Vector.h  Vector2.h  Vector3.h
source/: Matrix4x4.cpp  Vector2.cpp  Vector3.cpp
src/: Vector.h
test/: test.cpp
